--- a/templates/base.html
+++ b/templates/base.html
@@ -27,13 +27,13 @@
         <div class="navbar-nav">
             <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
-                <li><a class="nav-item nav-link active text-white" href="{% url 'profile' %}">Profile</a></li>
-                <li><a class="nav-item nav-link text-white" href="{% url 'logout' %}">Log Out</a></li>
+                <li><a class="nav-item nav-link active" href="{% url 'profile' %}">Profile</a></li>
+                <li><a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a></li>
                 {% else %}
-                <li><a class="nav-item nav-link text-white" href="{% url 'registration' %}">Register</a></li>
-                <li><a class="nav-item nav-link text-white" href="{% url 'login' %}">Log In</a></li>
+                <li><a class="nav-item nav-link" href="{% url 'registration' %}">Register</a></li>
+                <li><a class="nav-item nav-link" href="{% url 'login' %}">Log In</a></li>
                 {% endif %}
-                <li><a class="nav-item nav-link text-white" href="{% url 'view_cart' %}">
+                <li><a class="nav-item nav-link" href="{% url 'view_cart' %}">
                     <i class="fa fa-shipping-cart"></i>Cart
                     {% if product_count > 0 %}
                     <label class="badge badge-warning">{{ product_count }}</label>
