--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <div class="navbar-nav">
             <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
-                <li><a class="nav-item nav-link active" href="{% url 'profile' %}">Profile</a></li>
+                <li><a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a></li>
                 <li><a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a></li>
                 {% else %}
                 <li><a class="nav-item nav-link" href="{% url 'registration' %}">Register</a></li>
@@ -40,8 +40,8 @@
                     {% endif %}
                 </a></li>
                 <li>
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <form action="{% url 'search' %}" method="get" class="form-inline">
+                        <input class="form-control mr-sm-2" type="text" name="q"  placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </li>
