--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     {% endif %}
                 </a></li>
                 <li>
-                    <form action="{% url 'search' %}" method="get" class="form-inline">
+                    <form action="{% url 'search' %}" method="get" class="form-inline form-right">
                         <input class="form-control mr-sm-2" type="text" name="q"  placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
