--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -5,5 +5,8 @@
 {% block page_heading %}{{ user }}'s Profile{% endblock %}
 
 {% block content %}
+<div class="container">
 <p>{{ profile.email }}</p>
+</div>
+
 {% endblock %}
