--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .jumbotron {
-  background-image: url(media/images/guitar-2222350_1920.jpg);
+  background-image: url("images/guitar-2222350_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
