--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -15,7 +15,7 @@
                 <div class="input-group">
                     <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
                     <span class="input-group-btn">
-                        <button class="btn btn-success" type="submit">Add</button>
+                        <button class="btn btn-success" type="submit" value="1">Add</button>
                     </span>
                 </div>
                      </form>
