--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -12,6 +12,7 @@
             <div class="card" style="width: 16rem;">
                 <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
                 <div class="card-body">
+                    <img src="{{ MEDIA_URL }}{{ product.image }}" class="card-img-top product" alt="...">
                     <div class="caption">
                         <h3>{{ item.product.name }}</h3>
                         <p class="product-description">{{ item.product.description }}</p>
