--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     <div class="caption">
                         <h3>{{ item.product.name }}</h3>
-                        <p class="product-description">{{ item.product.description }}</p>
+                        <!--<p class="product-description">{{ item.product.description }}</p>-->
                         <p>{{ item.product.price }}</p>
                         <p>
 
