--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -13,9 +13,9 @@
                     <form method="post" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                 <div class="input-group">
-                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                    <input name="quantity" type="number" min="1" max="999" value="1" class="form-control" placeholder="Quantity">
                     <span class="input-group-btn">
-                        <button class="btn btn-success" type="submit" value="1">Add</button>
+                        <button class="btn btn-success" type="submit">Add</button>
                     </span>
                 </div>
                      </form>
