--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -10,7 +10,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
             <div class="card" style="width: 16rem;">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+                <img src="{{ MEDIA_URL }}{{ product.image }}" class="card-img-top product" alt="...">
                 <div class="card-body">
                     <div class="caption">
                         <h3>{{ item.product.name }}</h3>
