--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -28,8 +28,8 @@
                                     <div class="input-group-addon">{{item.quantity}}</div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit"
-                                                                                aria-hidden="true"></span>Amend
+                            <button type="submit" class="btn btn-primary" value="1"><span
+                                                                                aria-hidden="true"><i class="fas fa-euro-sign"></i></span>Amend
                             </button>
                         </form>
                         </p>
