--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,9 +3,10 @@
 {% load bootstrap_tags %}
 
 {% block content %}
+<h1>Shopping Cart</h1>
 <div class="container">
     <div class="row">
-        <h1>Shopping Cart</h1>
+
         {% for item in cart_items %}
 
         <div class="col-lg-3 col-md-6 mb-4">
@@ -28,7 +29,7 @@
                                     <div class="input-group-addon">{{item.quantity}}</div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary" value="1"><span class="fas fa-euro-sign"></span>Amend
+                            <button type="submit" class="btn btn-primary" value="1">Amend
                             </button>
                         </form>
                         </p>
@@ -41,9 +42,8 @@
 </div>
 <div class="container row">
     <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign"
-                                                                               aria-hidden="true"></span>Checkout</a>
+    <p><span class="fas fa-euro-sign"></span>{{ total }}</p>
+    <a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
 </div>
 
 {% endblock %}
